[project]
name = "script-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "google-api-python-client>=2.182.0",
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.12",
    "langchain-google-vertexai>=3.0.1",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langgraph[cli]>=0.6.7",
    "tavily-python>=0.7.11",
    "uvicorn>=0.38.0",
    "youtube-transcript-api>=1.2.2",
]
